Wed Nov 08 21:40:46 2000  George Lebl <jirka@5z.com>

	* applet.c, extern.[ch], launcher.c, panel-widget.[ch], panel.c,
	  session.c:  Remember the last known config for applets, add a
	  signal (quite hackish) to figure out when an applet is about to
	  die.  If an applet dies unexpectadly (without being removed by user
	  or calling unregister_us), then display a dialog box and allow the
	  user to readd the applet with it's last saved settings.  This
	  should reduce the "where did my <insert name of applet>" go and
	  how do I get it back.

Mon Nov 06 02:06:57 2000  George Lebl <jirka@5z.com>

	* menu.c: some cleanup, mostly cosmetic

Sun Nov 05 05:22:45 2000  George Lebl <jirka@5z.com>

	* gnome-run.c: warning fixes

	* session.c, panel_config_global.h, basep-widget.c, foobar-widget.c,
	  gnome-panel-properties.c:  Imlement a normal layer panel setting.
	  this will be the future default as it seems that almost everybody
	  hates both always on top and always on bottom settings.

Sat Nov 04 22:59:52 2000  George Lebl <jirka@5z.com>

	* gnome-run.c, foobar-widget.[ch]:  minor cleanup and some evilness

Thu Nov 02 22:19:18 2000  George Lebl <jirka@5z.com>

	* session.c: only check for /proc/apm on linux.  Also read the
	  thing and see if the percentage is >= 0, otherwise it's -1
	  and that means there is no battery.  So don't add the battery
	  applet by default in that case.

Thu Nov 02 21:27:28 2000  George Lebl <jirka@5z.com>

	* extern.c, panel.gnorba: Implement the Panel2 interface.

	* applet.c, panel-widget.c, panel.c: minor cosmetic cleanup

	* Makefile.am, gnome-panel-add-launcher.c:  Add a proggie to add
	  launchers externally.  Let's not doc this so that that many
	  people don't use it as it could become annoying, but major apps
	  may want to use it to optionally add their launcher to the panel.
	  note here, it should be OPTIONAL! in the installer, otherwise I'm
	  going to go after each and every dumbass who made it install an