@@ -18,6 +18,7 @@ gnome-panel-skels.c
 gnome-panel-impl.c
 gnome-panel-skelimpl.c
 gnome-panel-properties-capplet
+gnome-panel-add-launcher
 bad-applet
 my_gnome_panel_idl
 gwmh.c
