@@ -1,3 +1,7 @@
+Sat Nov 11 17:27:10 2000  George Lebl <jirka@5z.com>
+
+	* applet.c: minor cleanup
+
 Wed Nov 08 21:40:46 2000  George Lebl <jirka@5z.com>
 
 	* applet.c, extern.[ch], launcher.c, panel-widget.[ch], panel.c,
